# Daggerbot-RS

./: .dockerignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  build.sh  compose.bot.yml  deploy.sh  run.sh
.cargo/: config.toml
.github/workflows/: ci.yml
grpc/: Cargo.toml  build.rs
grpc/src/: lib.rs
schemas/: mpservers.sql  prohibited_urls.sql  prohibited_words.sql  sanctions.sql  settings.sql  webhooks.sql
src/: bridges.rs  commands.rs  controllers.rs  errors.rs  events.rs  internals.rs  main.rs  shutdown.rs
src/bridges/: pluginloader.rs  serenity.rs
src/commands/: dev.rs  moderation.rs  mp.rs  ping.rs  settings.rs  uptime.rs
src/controllers/: automod.rs  cache.rs  sql.rs
src/controllers/sql/: mpservers.rs  prohibited_urls.rs  prohibited_words.rs  sanctions.rs  settings.rs  webhooks.rs
src/events/: audit_log.rs  invite.rs  member.rs  message.rs  ready.rs
src/internals/: ansi.rs  canvas.rs  config.rs  invite_data.rs  nats.rs  scheduler.rs  seasonal.rs  tasks.rs  tsclient.rs  utils.rs
src/internals/assets/: presence.toml
src/internals/tasks/: monica.rs
src/plugins/: Message.lua  MsgResponse.lua
