[package]
name = "daggerbot-rs"
version = "4.1.0"
edition = "2024"

[workspace]
members = []

[workspace.dependencies]
ab_glyph = "0.2.29"
async-nats = "0.40.0"
bb8 = "0.9.0"
bb8-redis = "0.21.0"
cargo_toml = "0.22.1"
dashmap = "6.1.0"
image = "0.25.6"
imageproc = "0.25.0"
lazy_static = "1.5.0"
mlua = { version = "0.10.3", features = ["lua54", "send", "vendored"] }
num-format = "0.4.4"
parse_duration = "2.1.1"
poise = "0.6.1"
rand = "0.9.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json", "native-tls-vendored"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
similar = "2.7.0"
smallvec = "1.15.0"
sqlx = { version = "0.8.4", features = ["runtime-tokio", "postgres", "chrono"] }
sysinfo = "0.34.2"
tokenservice-client = { version = "0.4.3", registry = "gitea" }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros", "signal"] }
toml = "0.8.20"
uptime_lib = "0.3.1"

[dependencies]
ab_glyph = { workspace = true }
async-nats = { workspace = true }
bb8 = { workspace = true }
bb8-redis = { workspace = true }
cargo_toml = { workspace = true }
dashmap = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
lazy_static = { workspace = true }
mlua = { workspace = true }
num-format = { workspace = true }
parse_duration = { workspace = true }
poise = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
similar = { workspace = true }
smallvec = { workspace = true }
sqlx = { workspace = true }
sysinfo = { workspace = true }
tokenservice-client = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
uptime_lib = { workspace = true }

[patch.crates-io]
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }

[features]
production = ["docker", "automod"]
docker = []
automod = []
not_ready = []

[[bin]]
name = "daggerbot"
path = "src/main.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 2
